--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "hdb_helper",
   "version": "1.0.0",
   "description": "A helper script for HarperDB operations",
+  "type": "module",
   "main": "index.js",
   "bin": {
     "hdb": "./index.js"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "child_process": "^1.0.2",
@@ -15,12 +18,20 @@
     "fs": "^0.0.1-security",
     "inquirer": "^8.2.0",
     "path": "^0.12.7",
-    "readline": "^1.3.0"
+    "prompts": "^2.4.2",
+    "readline": "^1.3.0",
+    "winston": "^3.17.0",
+    "yargs": "^17.7.2"
   },
   "author": "Tristan Lee",
   "license": "ISC",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tristanlee85/harperdb-cli-helper.git"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "eslint": "^9.18.0",
+    "globals": "^15.14.0"
   }
 }
