--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "@inquirer/prompts": "^7.3.2",
     "chalk": "^4.1.2",
+    "deepmerge": "^4.3.1",
     "dotenv": "^16.4.7",
+    "ora": "^8.2.0",
     "winston": "^3.17.0",
     "yargs": "^17.7.2"
   },
